Ajustes a datos del  HTML

--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="assets/imgs/icono.svg">
+    <link rel="icon" type="image/svg+xml" href="assets/imgs/icono.svg" alt="Ícono del proyecto Amigo Secreto">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
-    <title>Amigo Secreto</title>
+    <title>Challenge Alura: Amigo Secreto</title>
+    <meta name="description" content="Página web del Challenge Alura Latam: Amigo Secreto. Explora las funcionalidades y el código de este desafío de desarrollo web.">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Peter Osorio">
+    <meta name="keywords" content="Amigo Secreto, Challenge Alura, GitHub Pages, Desarrollo Web, Proyecto Alura">
+    <meta property="og:title" content="Challenge Alura: Amigo Secreto">
+    <meta property="og:description" content="Descubre este proyecto del Challenge Alura: Amigo Secreto. Diviértete organizando intercambios de regalos de forma fácil y rápida.">
+    <meta property="og:image" content="https://peterosorios.github.io/Challenge-Alura-Amigo-Secreto/assets/imgs/icono.svg">
+    <meta property="og:url" content="https://peterosorios.github.io/Challenge-Alura-Amigo-Secreto/">
+    <meta property="og:type" content="website">
 </head>
 
 <body>
@@ -34,7 +46,6 @@
             </section>
         </div>
     </main>
-
     <script src="./assets/js/app.js" defer></script>
 </body>
 </html>
